--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@angular/http": "4.1.3",
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
-    "@ionic-native/core": "3.12.1",
-    "@ionic-native/splash-screen": "3.12.1",
-    "@ionic-native/status-bar": "3.12.1",
+    "@ionic-native/core": "^3.4.2",
+    "@ionic-native/splash-screen": "^3.4.2",
+    "@ionic-native/status-bar": "^3.4.2",
     "@ionic/storage": "2.0.1",
+    "firebase": "^4.3.0",
     "ionic-angular": "3.6.0",
     "ionicons": "3.0.0",
     "rxjs": "5.4.0",
